[gd_scene load_steps=14 format=3 uid="uid://hlgj2hjupou4"]

[ext_resource type="Script" path="res://scripts/FlyingEnemy.gd" id="1_0wt7s"]
[ext_resource type="Texture2D" uid="uid://f6nqtn2b7wgo" path="res://assets/sprites/flyingEnemyAnimation.png" id="2_mnhp4"]
[ext_resource type="Texture2D" uid="uid://drerh28mtiuuj" path="res://assets/sprites/flyingEnemyEye.png" id="3_ayaxv"]
[ext_resource type="AudioStream" uid="uid://bsuenjlneo5hq" path="res://assets/music/enemyShoot.wav" id="4_vs78b"]
[ext_resource type="PackedScene" uid="uid://dfv1x2eblqsrp" path="res://scenes/health_bar.tscn" id="5_23a0y"]
[ext_resource type="AudioStream" uid="uid://ct4wdubui6hk0" path="res://assets/music/EnemyHit.wav" id="6_sdsvt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vridx"]
radius = 9.03243

[sub_resource type="AtlasTexture" id="AtlasTexture_q2p3d"]
atlas = ExtResource("2_mnhp4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ate3h"]
atlas = ExtResource("2_mnhp4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uwvu"]
atlas = ExtResource("2_mnhp4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r4j0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uwvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ate3h")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bbuhi"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vxoym"]
radius = 223.0

[node name="FlyingEnemy" type="CharacterBody2D"]
z_index = 2
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0wt7s")

[node name="EnemyHitBox" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_vridx")

[node name="BodyAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r4j0y")
autoplay = "default"
frame_progress = 0.316178

[node name="EyeShoot" type="Node2D" parent="."]

[node name="Eye" type="Sprite2D" parent="EyeShoot"]
z_index = 8
position = Vector2(0, 1)
texture = ExtResource("3_ayaxv")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vs78b")
volume_db = 2.433
max_distance = 800.0
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_bbuhi")

[node name="HealthBar" parent="." instance=ExtResource("5_23a0y")]
offset_left = -9.0
offset_top = -16.0
offset_right = 31.0
offset_bottom = 24.0

[node name="DamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_sdsvt")
bus = &"SFX"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_vxoym")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.113
autostart = true

[connection signal="body_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_lmb_body_entered"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_aggro_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
